; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_hash-object.c_hash_literally.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_hash-object.c_hash_literally.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i32 }
%struct.object_id = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, i32, i8*, i32)* @hash_literally to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_literally(%struct.object_id* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.object_id*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.strbuf, align 4
  %10 = alloca i32, align 4
  store %struct.object_id* %0, %struct.object_id** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = bitcast %struct.strbuf* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %12 = load i32, i32* %6, align 4
  %13 = call i64 @strbuf_read(%struct.strbuf* %9, i32 %12, i32 4096)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i32 -1, i32* %10, align 4
  br label %25

16:                                               ; preds = %4
  %17 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = load %struct.object_id*, %struct.object_id** %5, align 8
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @hash_object_file_literally(i32 %18, i32 %20, i8* %21, %struct.object_id* %22, i32 %23)
  store i32 %24, i32* %10, align 4
  br label %25

25:                                               ; preds = %16, %15
  %26 = call i32 @strbuf_release(%struct.strbuf* %9)
  %27 = load i32, i32* %10, align 4
  ret i32 %27
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @strbuf_read(%struct.strbuf*, i32, i32) #2

declare dso_local i32 @hash_object_file_literally(i32, i32, i8*, %struct.object_id*, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
